Updated base messages, added about page

--- a/AzureExplorerWebApp/Views/Home/Privacy.cshtml
+++ b/AzureExplorerWebApp/Views/Home/Privacy.cshtml
@@ -3,4 +3,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Every Developer has the right to code!!! </p>
+<p>This website has been created for learning purpose only. There is no monetary benefit generated from this website for the creator.</p>
+<p>This website does not store any user data.</p>
