--- a/AzureExplorerWebApp/Views/Home/Index.cshtml
+++ b/AzureExplorerWebApp/Views/Home/Index.cshtml
@@ -4,5 +4,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>
+        "Life is a race, if you don't run fast you'll get trampled." <br /> 
+                            - Viru Sahastrabuddhe (aka Virus)
+    </p>
 </div>
