Testing continous deployment

--- a/AzureExplorerWebApp/Views/Home/Index.cshtml
+++ b/AzureExplorerWebApp/Views/Home/Index.cshtml
@@ -6,6 +6,11 @@
     <h1 class="display-4">Welcome</h1>
     <p>
         "Life is a race, if you don't run fast you'll get trampled." <br /> 
-                            - Viru Sahastrabuddhe (aka Virus)
+                            - Viru Sahastrabuddhe (aka 'virus')
     </p>
+</div>
+
+<div>
+    <p>Typing something on my new lacktock the "Asus Zephrus ROG M16" its like a mchine gun!!</p>
+    no print screen key here
 </div>
