--- a/AzureExplorerWebApp/Views/Shared/_Layout.cshtml
+++ b/AzureExplorerWebApp/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Marvel">Marvel</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Marvel" asp-action="Characters">Marvel</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
