--- a/AzureExplorerWebApp/Views/Marvel/Characters.cshtml
+++ b/AzureExplorerWebApp/Views/Marvel/Characters.cshtml
@@ -2,34 +2,64 @@
 @{
     ViewData["Title"] = "Marvel";
 
-    int previousOffset = Model.Data.Offset == 0 ? Model.Data.Offset : Model.Data.Offset - Model.Data.Limit;
+    int previousOffset = Model.Data.Offset - Model.Data.Limit;
     int nextOffset = Model.Data.Limit + Model.Data.Offset;
-    string  name =  Context.Request.Query["name"].ToString();
+    string name = Context.Request.Query["name"].ToString();
 }
 
 <div class="text-center">
-    <h1 class="display-4">Here we will be exploring the Marvel Api</h1>
-    <p>
+    <h1 class="display-4">Exploring the Marvel Api!!!</h1>
+    <div>
         <h2>Marvel Characters</h2>
         <h6>(Data provided by Marvel. © 2014 Marvel)</h6>
-    </p>
-    <div style="width:100%; display: inline-block;">
-        <div style="width:50%; float:left; text-align:left;">
-            <a asp-controller="Marvel" asp-action="Characters" asp-route-offset="@previousOffset"  asp-route-name ="@name">Previous</a>
-        </div>
-        <div style="width:50%; float:right; text-align:right;">
-            <a asp-controller="Marvel" asp-action="Characters" asp-route-offset="@nextOffset" asp-route-name ="@name">Next</a>
-        </div>
     </div>
-    <div style="display: inline-block;">
-        @foreach (var character in Model.Data.Results)
-        {
-        <a href="@character.DetailUrl" target="_blank">
-            <div style="float:left; padding:10px; border: 1px solid grey">
-                <div style="width: 200px; height: 200px; overflow: hidden; padding-bottom: 5px;"><img src="@character.Thumbnail.Url" title="@character.Name" alt="@character.Name" style="width:200px;" /></div>
-                <div style="width: 200px; white-space: nowrap; overflow: hidden;"><span style="text-overflow: ellipsis">@character.Name</span></div>
+</div>
+<div class="text-left">
+    <form action="Characters" method="get">
+        <div class="row">
+            <div class="col-auto">Name:</div>
+            <div class="col">
+                <input name="name" placeholder="Enter character name" autocomplete="off" class="form-control" />
             </div>
-        </a>
-        }
+            <div class="col">
+                <button type="submit" class="btn">Search</button>
+            </div>
+        </div>
+    </form>
+</div>
+<div class="text-center">
+    <div class="row">
+        <div class="col-6 text-left">
+            @if (previousOffset >= 0)
+            {
+                <a asp-controller="Marvel" asp-action="Characters" asp-route-offset="@previousOffset" asp-route-name="@name">Previous</a>
+            }
+
+        </div>
+        <div class="col-6 text-right">
+            @if (nextOffset < Model.Data.Total)
+            {
+                <a asp-controller="Marvel" asp-action="Characters" asp-route-offset="@nextOffset" asp-route-name="@name">Next</a>
+            }
+        </div>
     </div>
+    @if (Model.Data.Results.Count > 0)
+    {
+        <div class="row">
+            @foreach (var character in Model.Data.Results)
+            {
+                <div class="card">
+                    <a href="@character.DetailUrl" target="_blank">
+
+                        <div class="char-thum"><img src="@character.Thumbnail.Url" title="@character.Name" alt="@character.Name" /></div>
+                        <div class="char-name"><span style="text-overflow: ellipsis">@character.Name</span></div>
+                    </a>
+                </div>
+            }
+        </div>
+    }
+    else
+    {
+        <div class="row text-center">No results found!</div>
+    }
 </div>
